--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.6
   provider: ^6.1.2
   get_it: ^7.7.0
   retrofit: ^4.1.0
@@ -42,9 +42,9 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.3
   pretty_dio_logger: ^1.3.1
-  # flutter_barcode_scanner: ^2.0.0-nullsafety.0
   print_bluetooth_thermal: ^1.1.0
   esc_pos_utils_plus: ^2.0.3
+  # qr_bar_code_scanner_dialog: ^0.0.5
 
 dev_dependencies:
   flutter_test:
