--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   print_bluetooth_thermal: ^1.1.0
   esc_pos_utils_plus: ^2.0.3
-  # qr_bar_code_scanner_dialog: ^0.0.5
+  qr_bar_code_scanner_dialog: ^0.0.5
 
 dev_dependencies:
   flutter_test:
