--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,8 +11,14 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    defaultConfig {
+        // ...existing code...
+        multiDexEnabled true
     }
 
     kotlinOptions {
@@ -39,6 +45,11 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+}
+
+dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
 
 flutter {
